Fix tab text overflow

--- a/src/pages/leaderboard/index.scss
+++ b/src/pages/leaderboard/index.scss
@@ -25,10 +25,10 @@
   flex: 1;
   text-align: center;
   padding: 14px 4px;
-  font-size: 20px;
+  font-size: 18px;
   color: #999;
   position: relative;
-  white-space: nowrap;
+  word-break: break-word;
 }
 
 .tab-active {
